# ESP8285-WEBSERVER

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
.github/ISSUE_TEMPLATE/: bug_report.md
components/esp_http_server/: CMakeLists.txt
components/esp_http_server/include/: esp_http_server.h
components/esp_http_server/src/: esp_httpd_priv.h  esp_httpd_priv.h.bak  httpd_main.c  httpd_uri.c  httpd_ws.c  httpd_ws.c.bak
components/esp_http_server/src/port/esp8266/: osal.h
components/esp_http_server/src/util/: ctrl_sock.c
components/fatfs/: CMakeLists.txt  Kconfig.projbuild
components/fatfs/diskio/: diskio.c  diskio_impl.h  diskio_rawflash.c  diskio_wl.c
components/fatfs/src/: ff.c  ff.h  ffconf.h  ffsystem.c
components/fatfs/vfs/: vfs_fat_spiflash.c
components/sd_spi_driver/: CMakeLists.txt  Kconfig.projbuild  diskio_sd_spi.c
components/sd_spi_driver/include/: diskio_sd_spi.h
data/: index.html
main/: CMakeLists.txt  Kconfig.projbuild  buzzer.c  dns_server.c  main.c  orchestrator.c  power_mgmt.c  storage.c  web_server.c  wifi_ap.c
main/include/: smart_ap_api.h  smart_ap_common.h  smart_ap_config.h  smart_ap_types.h
